site: minor review

--- a/site/gs-ml.html
+++ b/site/gs-ml.html
@@ -104,7 +104,7 @@
 	<p>Since HTML4 is a <a href="https://en.wikipedia.org/wiki/Domain-specific_language">DSL</a>, editors must know each tag name
 		and the issue is partially worked around (as long as authors don't intend to override standard html tags with the <code>white-space</code> css property).</p>
 
-	<p>In HTML5 with web-components the issue become more important because there is no way to explicitly specify the break-space behavior:</p>
+	<p>In HTML5 with web-components the DSL principle is no more applicable and the issue become more important because there is no way to explicitly specify the break-space behavior:</p>
 
 	<code-mirror mode="htmlmixed" class="border">
 <pre>&lt;ml-gsml-compare format="xml">
