--- a/site/gs-on.html
+++ b/site/gs-on.html
@@ -159,7 +159,7 @@ members=[
 	<p>In the first classic form, similar to JSON, event driven parsing is not really useful and an intermediate tree of generic objects is
 		generally constructed first and then is mapped to the typed objects.</p>
 	<p>The optimized second form pulls up certain properties in the header attributes and permits a simple and efficient event driven parsing with direct
-		typed object construction. Have a look to <a href="gs-om.html">GS-OM</a> a more powerful Generic-Syntax for object mapping.</p>
+		typed object construction. Have a look to <a href="gs-gr.html">GS-graph</a> a more powerful Generic-Syntax for object mapping and graph.</p>
 
 	<h2>How does GS work?</h2>
 	<p>In GS all is node and a node has this form:</p>
