--- a/site/index.html
+++ b/site/index.html
@@ -96,12 +96,12 @@
 			</gs-viewer>
 		</div>
 		<div class="side s1">
-			<h2>GS for Object Mapping</h2>
-			<p>Neither JSON nor XML are well suited for Object Mapping.</p>
+			<h2>GS for object mapping and graph</h2>
+			<p>Neither JSON nor XML are well suited for object mapping.</p>
 			<p>Generic-syntax combines map properties of JSON and named nodes of XML
 				and offers a new and efficient syntax for specific purpose like serializing typed object graphs.</p>
 			<div class="seeMoreArea">
-				<a class="seeMoreBtn" href="gs-om.html">See more...</a>
+				<a class="seeMoreBtn" href="gs-gr.html">See more...</a>
 			</div>
 		</div>
 	</section>
