site: review and add gsTools.html page to give a try.

--- a/site/gs-gr.html
+++ b/site/gs-gr.html
@@ -14,7 +14,7 @@
 	<h2>JSON and XML shortcomings</h2>
 
 	<div class="cols">
-		<div class="border s1 scroll">
+		<div class="vbox border s1 scroll">
 			<div class="head">JSON-LD</div>
 			<code-mirror mode="javascript">
 <pre>{
@@ -40,7 +40,7 @@
 </pre>
 			</code-mirror>
 		</div>
-		<div class="border s1 scroll">
+		<div class="vbox border s1 scroll">
 			<div class="head">GS</div>
 			<gs-viewer>
 <pre>
@@ -111,7 +111,8 @@
 	</gs-viewer>
 
 	<p>GS-graph uses the GS attribute and node special type <code>%</code> <em>instruction</em> to link objects and call methods at the building stage.</p>
-	<p><em class="warn">A first experimental GS-graph building implementation is available in Typescript and Javascript.</em></p>
+	<p><em class="warn">A first experimental GS-graph building implementation is available in Typescript and Javascript.</em>
+		Source code is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a>.</p>
 </main>
 </body>
 </html>
