--- a/site/gs-ml.html
+++ b/site/gs-ml.html
@@ -356,7 +356,7 @@
 	<p>Comments can be as simple as text or highly structured (see <code>&lt;#THREAD></code> example above).</p>
 
 	<p>The <code>&lt;&http://schema.org/Product></code> example illustrates how semantic metadata could be inserted in a presentation page as an alternative
-		of <a href="https://en.wikipedia.org/wiki/JSON-LD">JSON-LD</a> or <a href="https://en.wikipedia.org/wiki/Microdata_(HTML)">Microdata</a></p>
+		of <a href="https://en.wikipedia.org/wiki/JSON-LD">JSON-LD</a> or <a href="https://en.wikipedia.org/wiki/Microdata_(HTML)">Microdata</a>.</p>
 
 	<p>Note: due to DOM limitations, these richer comments and metas nodes can't be instantiated in DOM nodes and are skipped in the DOM building process.</p>
 
