--- a/site/gsApi.html
+++ b/site/gsApi.html
@@ -10,11 +10,13 @@
 <h1>Generic-Syntax API and implementations</h1>
 
 <main>
+	<h2>Implementations and API</h2>
+
 	<p>A first implementation is available in Typescript/Javascript for tests.</p>
 
 	<p>For now, <em class="warn">Generic-syntax is in progress and should not be used in production</em>.</p>
 
-	<p>Source code is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a></p>
+	<p>Source code is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a>.</p>
 
 	<h2>High level API</h2>
 	<p>TODO</p>
