--- a/site/gsDefinition.html
+++ b/site/gsDefinition.html
@@ -288,6 +288,7 @@ mixedText = /([^<\\]|\\['"`&lt;bfnrt]|\\u[0-9A-Fa-f]{6})*/
 
 	<p>Except for these two specific cases, implementing an efficient GS parser is straightforward.
 		The GS syntax doesn't need speculative try and rewind strategies (like HTML).</p>
+	<p>You can find a parser implementation in Typescript here: <a href="https://github.com/generic-syntax/gs-js/blob/master/src/core/gsParser.ts">https://github.com/generic-syntax/gs-js/blob/master/src/core/gsParser.ts</a>.</p>
 </main>
 </body>
 </html>
