--- a/site/gsTry.html
+++ b/site/gsTry.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>GS tools</title>
+	<title>GS try it!</title>
 	<link rel="stylesheet" type="text/css" href="lib/common.css">
 	<script src="lib/common.js"></script>
 </head>
 <body>
-<h1>Generic-Syntax tools</h1>
+<h1>Generic-Syntax, give it a try!</h1>
 <main>
 	<section>
 		<H2>Try-it !</H2>
